--- a/css/about-me.css
+++ b/css/about-me.css
@@ -1,5 +1,9 @@
 @charset "utf-8";
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     background-color: #bbd3dd;
     }
@@ -35,7 +39,7 @@ padding: 80px 60px;
 }
 
 .profile_title {
-    font-size: 86px;
+    font-size: 80px;
     color: #ebeae9;
 }
 
@@ -44,7 +48,6 @@ padding: 80px 60px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap:150px;
     max-width:1200px;
     margin: 0 auto;
 }
@@ -53,13 +56,15 @@ padding: 80px 60px;
     display:flex;
     flex-direction: column;
     align-items: center;
+    width:50%;
 }
 
 .profile_logo {
     display: flex;
-    justify-content: flex-end;
-    gap:60px;
+    justify-content: space-around;
+    align-items: center;
     padding-bottom: 60px;
+    width:100%;
 }
 
 .profile_logo img {
@@ -75,16 +80,13 @@ padding: 80px 60px;
 .profile_main_wrapper {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
     padding:90px 40px;
-    gap:150px;
     max-width: 1200px;
     margin:0 auto;
 }
 
-.profile_photo img {
-    width:450px;
-}
+
 
 .profile_name {
     font-size: 30px;
@@ -102,12 +104,13 @@ padding: 80px 60px;
 }
 
 .main_photo {
-    width:450px;
+    width:40%;
 }
 
 
 .profile_text {
     font-size: 18px;
+    width:50%
 }
 
 .profile_text ul li {
@@ -171,32 +174,35 @@ padding: 80px 60px;
 /* フッター */
 
 .site_footer_wrapper {
-    background-color: #fefefd;
-    padding:60px 4.8%;  
+    background-color: #FFF;
 }
 
-.site_footer_wrapper p {
-    font-size: 30px;
-    padding:30px;
+.footer_contact_text {
+    font-size: 28px;
     text-align: center;
+    padding-bottom: 60px;
 }
 
-.site_footer_wrapper img {
-    width:150px;
-    display: block;
-    margin: 0 auto;
+
+.footer_contact_btn a {
+    display: flex;
+    justify-content: center;
+}
+
+.footer_contact_btn a img {
+    width:250px;
+    height: auto;
+    display: flex;
+    justify-content: center;
 }
 
 .site_footer_logo {
-    background-color: #fefefd;
     display: flex;
     justify-content: flex-end;
-    padding-right: 20px;
-    padding-bottom: 20px;
+    padding-right: 35px;
+    padding-bottom: 30px;
 }
 
-
-.site_footer_logo img {
-    width: 208px;
-    height:auto;
+.site_footer_logo a img {
+    width:208px;
 }
