--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,8 @@
 @charset "utf-8";
 
+html {
+    scroll-behavior: smooth;
+}
 
 /* ヘッダー */
 .header_container {
@@ -118,7 +121,7 @@ color: #002447;
 
 
 /* about me */
-#aboutme {
+#about-me {
     background-color: #bbd3dd;
     padding:80px 4.8%;
 }
@@ -147,17 +150,16 @@ color: #002447;
     padding:30px;
     display:flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .aboutme_main img {
     width:40%;
-    padding-left: 20px;
 }
 
 .aboutme_word {
     width :40%;
     line-height: 2em;
-    padding:10px 20px;
 }
 
 .profile_btn {
@@ -255,7 +257,6 @@ color: #002447;
 .lp_imageblock {
     text-align: center;
     width:50%;
-    padding:10px;
     font-size: 20px;
 }
 
@@ -320,6 +321,7 @@ color: #002447;
     margin: 0;
     padding-bottom: 5px;
     transition: color 0.3s ease; /* 文字色も変化させたい場合 */
+    line-height: 1.6em;
 }
 
 .banner_imageblock p::after {
@@ -420,5 +422,19 @@ color: #002447;
     justify-content: flex-end;
     gap:30px;
     font-size: 18px;
+}
+
+@media screen and (max-width:1150px) {
+
+    /* about-me */
+.aboutme_main img {
+    width:50%;
+}
+
+.aboutme_word {
+    width :50%;
+    line-height: 2em;
+    padding-left: 5%;
+}
 }
 
