--- a/css/about-me.css
+++ b/css/about-me.css
@@ -110,7 +110,7 @@ padding: 80px 60px;
 
 .profile_text {
     font-size: 18px;
-    width:50%
+    width:55%
 }
 
 .profile_text ul li {
@@ -190,7 +190,7 @@ padding: 80px 60px;
 }
 
 .footer_contact_btn a img {
-    width:250px;
+    width:200px;
     height: auto;
     display: flex;
     justify-content: center;
@@ -205,4 +205,163 @@ padding: 80px 60px;
 
 .site_footer_logo a img {
     width:208px;
+}
+
+@media screen and ( max-width:1000px ) {
+
+    .profile_title_wrapper {
+        padding:100px 20px 40px 20px;
+    }
+
+
+    .profile_title {
+        font-size: 50px;
+        text-align: center;
+    }
+
+    .profile_logo {
+        display:flex;
+        flex-direction:column;
+        align-items: center;
+        gap:10px;
+    }
+
+    .profile_logo {
+        width:100%;
+    }
+
+    .profile_logo p {
+        text-align: center;
+    }
+}
+
+@media screen and ( max-width:767px ) {
+    
+    .profile_photo {
+        width:45%;
+    }
+
+    .profile_logo {
+        padding-bottom: 40px;
+    }
+    
+    .profile_logo img {
+        width:50%;
+    }
+
+    .profile_logo p {
+        font-size:20px;
+        }
+    
+    .profile_name {
+        font-size:20px ;
+    }
+
+    .profile_name_en {
+        font-size: 18px;
+    }
+
+    .profile_main_wrapper {
+        padding: 60px 20px;
+    }
+
+
+    .profile_text ul li {
+        display: flex;
+        flex-direction: column;
+        padding-bottom: 5px;
+        font-size: 14px;
+    }
+
+.about {
+    font-weight: bold;
+    display: block;
+    margin-bottom: 5px;
+}
+
+.about_text {
+    margin: 0;
+    line-height: 1.6;
+}
+
+/* footer */
+    .footer_contact_text {
+        font-size: 20px;
+    }
+
+    .footer_contact_btn a img {
+        width:175px;
+        height: auto;
+    }
+
+    .site_footer_logo a {
+        text-align: end;
+
+    }
+
+    .site_footer_logo a img {
+        width:40%
+
+    }
+
+}
+
+@media screen and ( max-width:480px ) {
+    
+    .profile_title_wrapper {
+        padding:80px 20px 40px 20px;
+    }
+
+
+    .profile_title {
+        font-size: 30px;
+        text-align: center;
+    }
+
+    .profile_top_wrapper {
+        padding:40px 20px;
+    }
+    
+    .profile_logo p {
+        font-size: 16px;
+    }
+
+       .profile_name {
+        font-size:14px ;
+    }
+
+    .profile_name_en {
+        font-size: 14px;
+    }
+
+    .main_photo {
+        display:none;
+    }
+
+    .profile_main_wrapper {
+        padding:20px;
+    }
+
+    .profile_text {
+        width:100%;
+    }
+
+    .profile_text ul li {
+    padding-bottom: 20px;
+    font-size: 14px;
+    width:100%
+    }
+
+    .footer_contact_text {
+        font-size: 18px;
+    }
+
+    .footer_contact_btn a img {
+        width:120px;
+    }
+
+    .site_footer_logo {
+        padding-top: 30px;
+    }
+
 }
