--- a/css/works.css
+++ b/css/works.css
@@ -51,23 +51,21 @@ padding: 80px 60px;
 
 .banner {
     display: flex;
-    justify-content: space-around;
-    align-items: center;
-    gap:60px;
+    justify-content: space-between;
+    align-items: flex-start;
     padding: 50px 40px;
+    max-width: 11140px;
 }
 
 .banner_text {
-    width:50%;
+    width:45%;
 }
 
 .banner_text h3 {
-    font-size: 30px;
+    font-size: 26px;
     font-weight: bold;
-    padding-top: 30px;
     border-bottom: 2px solid #002447;
     padding-bottom: 8px;
-
 }
 
 .banner_comment {
@@ -77,7 +75,6 @@ padding: 80px 60px;
 }
 
 .banner_image {
-    width: 50%;
     max-width: 521px;
 }
 
@@ -152,4 +149,123 @@ padding: 80px 60px;
 
 .site_footer_logo a img {
     width:208px;
+}
+
+@media screen and ( max-width:1100px ) {
+    
+    .banner_image {
+        width: 50%;
+        text-align: center;
+    }
+    
+    .banner_image img {
+        width:90%;
+    }
+
+    .banner {
+        padding:0;
+        padding-bottom: 60px;
+    }
+
+    .banner_text h3 {
+        font-size: 22px;
+    }
+
+    .banner_comment {
+        font-size: 16px;
+        padding-top: 0;
+        padding-bottom: 15px;
+    }
+
+
+
+
+@media screen and ( max-width:767px ) {
+
+    .works_title_wrapper {
+        padding:100px 20px 40px 20px;
+    }
+
+
+    .works_title {
+        font-size: 50px;
+        text-align: center;
+    }
+
+    .banner {
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: center;
+    }   
+
+    .banner_text {
+        width: 100%;
+        padding-top: 30px;
+    }
+
+    .banner_text h3 {
+        font-size: 20px;
+        text-align: center;
+    }
+
+    .banner_comment {
+        font-size: 16px;
+    }
+
+    .banner_image {
+        width: 100%;
+        text-align: center;
+    }
+
+
+/* footer */
+    .footer_contact_text {
+        font-size: 20px;
+    }
+
+    .footer_contact_btn a img {
+        width:175px;
+        height: auto;
+    }
+
+    .site_footer_logo a {
+        text-align: end;
+
+    }
+
+    .site_footer_logo a img {
+        width:40%
+
+    }
+
+}
+
+
+}
+
+@media screen and ( max-width:480px ) {
+
+
+    .banner_text h3 {
+        font-size: 18px;
+    }
+
+    .banner_comment {
+        font-size: 14px;
+        padding:10px;
+    }
+
+      .footer_contact_text {
+        font-size: 18px;
+    }
+
+    .footer_contact_btn a img {
+        width:120px;
+    }
+
+    .site_footer_logo {
+        padding-top: 30px;
+    }
+
+
 }
