--- a/css/about-me.css
+++ b/css/about-me.css
@@ -31,6 +31,12 @@ font-size: 16px;
 color: #002447;
 }
 
+/* ハンバーガーボタン */
+.hamburger,
+.header_nav_sp {
+  display: none;
+}
+
 /* プロフィールタイトル */
 
 .profile_title_wrapper {
@@ -237,6 +243,133 @@ padding: 80px 60px;
 
 @media screen and ( max-width:767px ) {
     
+    /* ハンバーガー */
+    .hamburger {
+    display:block;
+    width: 30px;
+    height: 25px;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    cursor: pointer;
+    z-index: 1000;
+    margin-left: auto;
+}
+
+/* 真ん中の線 */
+.hamburger span {
+    width: 100%;
+    height: 3px;
+    background-color: #fefefd;
+    border-radius: 2px;
+    position: absolute;
+    top: 50%;
+    right:0;
+    transform: translateY(-50%);
+    transition: all 0.3s;
+}
+
+/* 上の線（疑似要素） */
+.hamburger span::before {
+    content: '';
+    display: block;
+    width: 75%;
+    height: 3px;
+    background-color: #fefefd;
+    border-radius: 2px;
+    position: absolute;
+    top: -14px;
+    right:0;
+    transition: all 0.3s;
+}
+
+/* 下の線（疑似要素） */
+.hamburger span::after {
+    content: '';
+    display: block;
+    width: 65%;
+    height: 3px;
+    background-color: #fefefd;
+    border-radius: 2px;
+    position: absolute;
+    top: 14px;
+    right:0;
+    transition: all 0.3s;
+}
+
+/* メニューが開いた時（×印に変形） */
+.hamburger.active span {
+    background-color: transparent; /* 真ん中の線を透明に */
+}
+
+.hamburger.active span::before {
+    top: 0;
+    width:100%;
+    transform: rotate(45deg);
+}
+
+.hamburger.active span::after {
+    top: 0;
+    width:100%;
+    transform: rotate(-45deg);
+}
+
+.header_nav {
+        display: none; /* PC用メニューを非表示 */
+    }
+    
+.header_nav_sp {
+    position:absolute;
+    height:100vh;
+    width: 100%;
+    height: 100vh;
+    background-color:#002447;
+    top: 0;
+    right: 0;
+    z-index: 999;
+    font-display: flex;
+    flex-direction: column;
+}
+
+.header_nav_sp img {
+    width:35%;
+    position: absolute;
+    top:540px;
+    left:250px;
+}
+
+.header_nav_sp.active {
+    display: block; /* ← これを追加！ */
+}
+    
+    .header_nav_sp a {
+         color:#fff;
+         font-size: 20px;
+    }
+
+     .header_nav_sp ul {
+        display: flex;
+       justify-content: space-between;
+        height:100%;
+        justify-content: center;
+        align-items: center;
+        gap:80px
+    }
+    
+    .header_nav_sp ul li {
+        margin: 40px 0;
+  
+    }
+    
+    .header_nav_sp ul li a {
+        color: #fefefd;
+        text-decoration: none;
+        writing-mode: vertical-lr;
+        font-size: 22px;
+    }
+} 
+
+
     .profile_photo {
         width:45%;
     }
@@ -303,8 +436,6 @@ padding: 80px 60px;
         width:40%
 
     }
-
-}
 
 @media screen and ( max-width:480px ) {
     
