--- a/css/index.css
+++ b/css/index.css
@@ -4,6 +4,10 @@ html {
     scroll-behavior: smooth;
 }
 
+body {
+    overflow-x: hidden;
+}
+
 /* ヘッダー */
 .header_container {
     padding-right: 4.8%;
@@ -499,6 +503,7 @@ color: #002447;
 .banner_imageblock img {
     width:100%;
     height: auto;
+    margin: 0 auto;
 }
 
 .banner_imageblock a p {
@@ -530,6 +535,10 @@ color: #002447;
 
 .lbanner_imageblock p:hover {
     color: #002447;
+}
+
+.slick-slide {
+    padding:10px;
 }
 
 .bannerworks_btn {
@@ -722,7 +731,7 @@ color: #002447;
 .header_nav_sp img {
     width:38%;
     position: absolute;
-    top:540px;
+    top:65vh;
     left:30%;
 }
 
@@ -760,12 +769,14 @@ color: #002447;
 
     .first_view_word h2 {
         color: #fefefd;
-        text-shadow:2px 2px 4px rgba(0,0,0,0.4);;
+        text-shadow:2px 2px 4px rgba(0,0,0,0.4);
+        font-size:40px;
     }
 
     /* コンセプト */
     .concept_word {
     align-items: center;
+    padding:20% 9.8%;
     }
 
     .concept_word p {
@@ -787,6 +798,7 @@ color: #002447;
         display: flex;
         flex-direction: column;
         overflow: hidden;
+        padding:10px;
     }
     
     .aboutme_main img {
@@ -799,7 +811,6 @@ color: #002447;
     .aboutme_title {
         float: left;
         padding:0;
-        padding-right: 10px;
     }
     
     .aboutme_title h2 {
@@ -843,6 +854,14 @@ color: #002447;
         padding-bottom:40px;
     }
 
+      .works_title_wrapper img {
+        width:200px;
+        height:60px;
+        transform: rotate(-10deg); 
+        padding-top: 30px;
+        padding-left: 30px;
+    }
+
     .works_subtitle {
         text-align: end;
         padding: 0;
@@ -865,6 +884,7 @@ color: #002447;
     .banner_imageblock a img {
         height:280px;
         width:auto;
+        margin: 0 auto;
     }
 
     .bannerworks_btn a img {
@@ -927,4 +947,34 @@ color: #002447;
 
 } 
 
+@media screen and (max-width:480px) {
+
+    .first_view_logo img {
+        width: 150px;
+        height: auto;
+}
+
+  .lp_works_scroll {
+        display:block;
+    }
+
+    .lp_movieblock {
+        display:none;
+}
+
+    .lp_imageblock {
+        text-align: center;
+        width:100%;
+        font-size: 18px;
+}
+
+    .works_subtitle {
+        font-size: 20px;
+    }
+
+    .banner_imageblock a img {
+        height:180px;
+        width:auto;
+    }
+}
 
